<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signin.SignInActivity">

    <TextView
        android:id="@+id/sign_up_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/d_din_bold"
        android:padding="@dimen/padding_medium"
        android:text="@string/sign_up_title"
        android:textColor="@color/text_title"
        android:textSize="@dimen/text_title"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_email_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_medium"
        android:hint="@string/sign_up_email_hint"
        android:theme="@style/TextInputLayout"
        app:hintTextAppearance="@style/TextInputLayout.Label"
        app:layout_constraintTop_toBottomOf="@id/sign_up_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_password_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:hint="@string/sign_up_password_hint"
        android:theme="@style/TextInputLayout"
        app:hintTextAppearance="@style/TextInputLayout.Label"
        app:layout_constraintTop_toBottomOf="@id/sign_up_email_text_layout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/text_normal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionGo"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_up_btn"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_password_text_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>