<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_location_note_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.landmarkremark.ui.explore.ExploreFragment">

    <TextView
        android:id="@+id/add_location_note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/d_din_bold"
        android:padding="@dimen/padding_medium"
        android:text="@string/add_location_note_hint"
        android:textColor="@color/text_title"
        android:textSize="@dimen/text_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_location_note_address_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:gravity="center|start"
        android:minHeight="50dp"
        android:textSize="@dimen/text_large"
        app:layout_constraintEnd_toStartOf="@id/add_location_note_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_location_note_title" />

    <ImageView
        android:id="@+id/add_location_note_edit"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:paddingStart="@dimen/padding_medium"
        android:paddingEnd="@dimen/padding_medium"
        android:src="@drawable/ic_edit"
        android:tint="@color/main_blue"
        app:layout_constraintBottom_toBottomOf="@id/add_location_note_address_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/add_location_note_address_text" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_location_note_info_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:hint="@string/add_location_note_info_title_hint"
        android:theme="@style/TextInputLayout"
        app:hintTextAppearance="@style/TextInputLayout.Label"
        app:layout_constraintTop_toBottomOf="@id/add_location_note_address_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_location_note_info_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textPostalAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_location_note_info_description_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/add_location_note_info_description_height"
        android:layout_margin="@dimen/margin_medium"
        android:hint="@string/add_location_note_info_description_hint"
        android:theme="@style/TextInputLayout"
        app:hintTextAppearance="@style/TextInputLayout.Label"
        app:layout_constraintTop_toBottomOf="@id/add_location_note_info_title_layout"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_location_note_info_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/add_location_note_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:padding="@dimen/padding_large"
        android:text="@string/common_back"
        app:layout_constraintBottom_toBottomOf="@id/add_location_note_next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/add_location_note_next" />

    <Button
        android:id="@+id/add_location_note_next"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:text="@string/common_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>