<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_gray">

    <LinearLayout
        android:id="@+id/profile_name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:background="@color/common_white"
        >
        <TextView
            android:id="@+id/profile_name_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:textColor="@color/text_title"
            android:text="@string/profile_name_title"
            android:textSize="@dimen/text_medium"
            android:fontFamily="@font/d_din"
            android:gravity="center_vertical"/>
        <TextView
            android:id="@+id/profile_name_txt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:textColor="@color/text_title"
            android:textSize="@dimen/text_large"
            android:fontFamily="@font/d_din_bold"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_notes_container"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name_container"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_medium"
        android:orientation="vertical"
        android:background="@color/common_white">
        <ImageView
            android:id="@+id/profile_notes_image"
            android:layout_width="@dimen/button_height"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/profile_notes_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/profile_notes_txt"
            android:background="@color/common_white"
            android:layout_marginStart="@dimen/margin_medium"
            android:src="@drawable/ic_explore"
            android:tint="@color/main_blue"
            />
        <TextView
            android:id="@+id/profile_notes_title"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:textColor="@color/text_title"
            android:text="@string/profile_notes_title"
            android:textSize="@dimen/text_medium"
            android:fontFamily="@font/d_din"
            android:gravity="center_vertical"
            app:layout_constraintStart_toEndOf="@+id/profile_notes_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:id="@+id/profile_notes_txt"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:textColor="@color/text_title"
            android:textSize="@dimen/text_large"
            android:fontFamily="@font/d_din_bold"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="@+id/profile_notes_title"
            app:layout_constraintTop_toBottomOf="@+id/profile_notes_title"
            app:layout_constraintEnd_toEndOf="@+id/profile_notes_title"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/profile_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="@dimen/margin_large"
        android:padding="@dimen/padding_small"
        android:textColor="@color/text_title"
        android:text="@string/sign_out"
        android:textSize="@dimen/text_large"
        android:fontFamily="@font/d_din_bold"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        />


</androidx.constraintlayout.widget.ConstraintLayout>